# GLPlayground

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragmentShader.fs  vertexShader.vs
src/: main.cpp  shader.cpp  shader.h  shader_storage.cpp  shader_storage.h
